--- a/index.html
+++ b/index.html
@@ -1,12 +1,594 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizzaria do Anderson Almeida</title>
-</head>
-<body>
-    <p>Testando nosso Site</p>
-    <p>Almeida Anderson</p>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page Simples</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <style>
+      /* Reset básico e estilos globais */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      html {
+        scroll-behavior: smooth;
+      }
+
+      body {
+        color: #333;
+        line-height: 1.6;
+      }
+
+      .container {
+        width: 90%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+
+      section {
+        padding: 80px 0;
+      }
+
+      h1,
+      h2,
+      h3 {
+        margin-bottom: 20px;
+        line-height: 1.3;
+      }
+
+      p {
+        margin-bottom: 15px;
+      }
+
+      .btn {
+        display: inline-block;
+        background: linear-gradient(135deg, #4a6ee0, #6a8cff);
+        color: white;
+        padding: 14px 30px;
+        border-radius: 50px;
+        text-decoration: none;
+        font-weight: 600;
+        transition: all 0.3s ease;
+        border: none;
+        cursor: pointer;
+        box-shadow: 0 4px 15px rgba(106, 140, 255, 0.3);
+      }
+
+      .btn:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 6px 20px rgba(106, 140, 255, 0.4);
+      }
+
+      .btn-secondary {
+        background: linear-gradient(135deg, #34c759, #2daa4e);
+        box-shadow: 0 4px 15px rgba(52, 199, 89, 0.3);
+      }
+
+      .btn-secondary:hover {
+        box-shadow: 0 6px 20px rgba(52, 199, 89, 0.4);
+      }
+
+      /* Header e Navegação */
+      header {
+        background-color: white;
+        box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+        position: fixed;
+        width: 100%;
+        top: 0;
+        z-index: 1000;
+      }
+
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 0;
+      }
+
+      .logo {
+        font-size: 28px;
+        font-weight: 700;
+        color: #4a6ee0;
+        text-decoration: none;
+      }
+
+      .logo span {
+        color: #34c759;
+      }
+
+      .nav-links {
+        display: flex;
+        list-style: none;
+      }
+
+      .nav-links li {
+        margin-left: 30px;
+      }
+
+      .nav-links a {
+        text-decoration: none;
+        color: #333;
+        font-weight: 500;
+        transition: color 0.3s;
+      }
+
+      .nav-links a:hover {
+        color: #4a6ee0;
+      }
+
+      .mobile-menu-btn {
+        display: none;
+        font-size: 24px;
+        background: none;
+        border: none;
+        color: #4a6ee0;
+        cursor: pointer;
+      }
+
+      /* Hero Section */
+      .hero {
+        background: linear-gradient(135deg, #f5f7ff 0%, #eef1ff 100%);
+        padding-top: 140px;
+        padding-bottom: 80px;
+      }
+
+      .hero-content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      .hero-text {
+        flex: 1;
+        padding-right: 40px;
+      }
+
+      .hero-image {
+        flex: 1;
+        text-align: center;
+      }
+
+      .hero h1 {
+        font-size: 48px;
+        color: #2c3e50;
+        margin-bottom: 25px;
+      }
+
+      .hero p {
+        font-size: 18px;
+        color: #5a6c7d;
+        margin-bottom: 30px;
+      }
+
+      .hero-image img {
+        max-width: 100%;
+        border-radius: 10px;
+        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+      }
+
+      /* Recursos */
+      .features {
+        background-color: white;
+      }
+
+      .section-title {
+        text-align: center;
+        margin-bottom: 60px;
+      }
+
+      .section-title h2 {
+        font-size: 36px;
+        color: #2c3e50;
+      }
+
+      .section-title p {
+        color: #5a6c7d;
+        max-width: 700px;
+        margin: 0 auto;
+      }
+
+      .features-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 30px;
+      }
+
+      .feature-card {
+        background: #f9faff;
+        border-radius: 10px;
+        padding: 30px;
+        text-align: center;
+        transition: transform 0.3s ease;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+      }
+
+      .feature-card:hover {
+        transform: translateY(-10px);
+      }
+
+      .feature-icon {
+        background: linear-gradient(135deg, #4a6ee0, #6a8cff);
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto 20px;
+        color: white;
+        font-size: 30px;
+      }
+
+      .feature-card h3 {
+        font-size: 22px;
+        color: #2c3e50;
+      }
+
+      .feature-card p {
+        color: #5a6c7d;
+      }
+
+      /* CTA Section */
+      .cta {
+        background: linear-gradient(135deg, #4a6ee0, #6a8cff);
+        color: white;
+        text-align: center;
+      }
+
+      .cta h2 {
+        font-size: 36px;
+        margin-bottom: 20px;
+      }
+
+      .cta p {
+        max-width: 700px;
+        margin: 0 auto 30px;
+        font-size: 18px;
+        opacity: 0.9;
+      }
+
+      /* Footer */
+      footer {
+        background: #2c3e50;
+        color: white;
+        padding: 60px 0 30px;
+      }
+
+      .footer-content {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+      }
+
+      .footer-column {
+        flex: 1;
+        min-width: 250px;
+        margin-bottom: 30px;
+        padding-right: 20px;
+      }
+
+      .footer-column h3 {
+        font-size: 20px;
+        margin-bottom: 25px;
+        color: #6a8cff;
+      }
+
+      .footer-column ul {
+        list-style: none;
+      }
+
+      .footer-column ul li {
+        margin-bottom: 12px;
+      }
+
+      .footer-column ul li a {
+        color: #ddd;
+        text-decoration: none;
+        transition: color 0.3s;
+      }
+
+      .footer-column ul li a:hover {
+        color: #6a8cff;
+      }
+
+      .social-icons {
+        display: flex;
+        gap: 15px;
+        margin-top: 20px;
+      }
+
+      .social-icons a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+        color: white;
+        text-decoration: none;
+        transition: all 0.3s;
+      }
+
+      .social-icons a:hover {
+        background: #6a8cff;
+        transform: translateY(-3px);
+      }
+
+      .copyright {
+        text-align: center;
+        padding-top: 30px;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        color: #aaa;
+        font-size: 14px;
+      }
+
+      /* Responsividade */
+      @media (max-width: 992px) {
+        .hero-content {
+          flex-direction: column;
+          text-align: center;
+        }
+
+        .hero-text {
+          padding-right: 0;
+          margin-bottom: 50px;
+        }
+
+        .hero h1 {
+          font-size: 40px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .nav-links {
+          display: none;
+        }
+
+        .mobile-menu-btn {
+          display: block;
+        }
+
+        .hero h1 {
+          font-size: 34px;
+        }
+
+        .section-title h2 {
+          font-size: 30px;
+        }
+
+        section {
+          padding: 60px 0;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .hero h1 {
+          font-size: 28px;
+        }
+
+        .section-title h2 {
+          font-size: 26px;
+        }
+
+        .btn {
+          padding: 12px 25px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Header e Navegação -->
+    <header>
+      <div class="container">
+        <nav>
+          <a href="#" class="logo">Simple<span>Land</span></a>
+
+          <ul class="nav-links">
+            <li><a href="#home">Início</a></li>
+            <li><a href="#features">Recursos</a></li>
+            <li><a href="#cta">Experimente</a></li>
+            <li><a href="#contact">Contato</a></li>
+          </ul>
+
+          <button class="mobile-menu-btn">
+            <i class="fas fa-bars"></i>
+          </button>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+      <div class="container">
+        <div class="hero-content">
+          <div class="hero-text">
+            <h1>Sua Solução Simples e Eficiente</h1>
+            <p>
+              Transforme sua maneira de trabalhar com nossa plataforma intuitiva
+              e poderosa. Fácil de usar, projetada para ajudá-lo a alcançar seus
+              objetivos mais rapidamente.
+            </p>
+            <a href="#cta" class="btn">Começar Agora</a>
+            <a
+              href="#features"
+              class="btn btn-secondary"
+              style="margin-left: 15px"
+              >Saiba Mais</a
+            >
+          </div>
+          <div class="hero-image">
+            <!-- Imagem ilustrativa -->
+            <div
+              style="
+                background: linear-gradient(135deg, #4a6ee0, #6a8cff);
+                width: 100%;
+                height: 350px;
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                font-size: 120px;
+                box-shadow: 0 15px 30px rgba(74, 110, 224, 0.3);
+              "
+            >
+              <i class="fas fa-rocket"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Recursos -->
+    <section id="features" class="features">
+      <div class="container">
+        <div class="section-title">
+          <h2>Recursos Incríveis</h2>
+          <p>
+            Descubra tudo que nossa plataforma oferece para otimizar seu
+            trabalho e aumentar sua produtividade.
+          </p>
+        </div>
+
+        <div class="features-grid">
+          <div class="feature-card">
+            <div class="feature-icon">
+              <i class="fas fa-bolt"></i>
+            </div>
+            <h3>Rápido e Leve</h3>
+            <p>
+              Carregamento instantâneo e interface otimizada para máxima
+              performance, mesmo em dispositivos mais antigos.
+            </p>
+          </div>
+
+          <div class="feature-card">
+            <div class="feature-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <h3>Seguro e Confiável</h3>
+            <p>
+              Seus dados estão protegidos com criptografia de ponta a ponta e
+              backups automáticos diários.
+            </p>
+          </div>
+
+          <div class="feature-card">
+            <div class="feature-icon">
+              <i class="fas fa-sync-alt"></i>
+            </div>
+            <h3>Sincronização em Tempo Real</h3>
+            <p>
+              Trabalhe em qualquer dispositivo e tenha todas as suas alterações
+              sincronizadas automaticamente.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section id="cta" class="cta">
+      <div class="container">
+        <h2>Pronto para Começar?</h2>
+        <p>
+          Junte-se a milhares de usuários que já estão aproveitando os
+          benefícios da nossa plataforma. Experimente gratuitamente por 30 dias.
+        </p>
+        <a href="#" class="btn btn-secondary">Experimente Grátis</a>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="contact">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-column">
+            <h3>SimpleLand</h3>
+            <p>
+              Soluções simples para problemas complexos. Nossa missão é tornar a
+              tecnologia acessível e útil para todos.
+            </p>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+
+          <div class="footer-column">
+            <h3>Links Rápidos</h3>
+            <ul>
+              <li><a href="#home">Início</a></li>
+              <li><a href="#features">Recursos</a></li>
+              <li><a href="#cta">Experimente Grátis</a></li>
+              <li><a href="#">Preços</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-column">
+            <h3>Contato</h3>
+            <ul>
+              <li>
+                <i class="fas fa-envelope" style="margin-right: 10px"></i>
+                contato@simpleland.com
+              </li>
+              <li>
+                <i class="fas fa-phone" style="margin-right: 10px"></i> (11)
+                99999-9999
+              </li>
+              <li>
+                <i class="fas fa-map-marker-alt" style="margin-right: 10px"></i>
+                São Paulo, SP
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="copyright">
+          <p>&copy; 2023 SimpleLand. Todos os direitos reservados.</p>
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      // Menu responsivo
+      const mobileMenuBtn = document.querySelector(".mobile-menu-btn");
+      const navLinks = document.querySelector(".nav-links");
+
+      mobileMenuBtn.addEventListener("click", () => {
+        navLinks.style.display =
+          navLinks.style.display === "flex" ? "none" : "flex";
+      });
+
+      // Ajustar menu em redimensionamento
+      window.addEventListener("resize", () => {
+        if (window.innerWidth > 768) {
+          navLinks.style.display = "flex";
+        } else {
+          navLinks.style.display = "none";
+        }
+      });
+
+      // Fechar menu ao clicar em um link (em dispositivos móveis)
+      document.querySelectorAll(".nav-links a").forEach((link) => {
+        link.addEventListener("click", () => {
+          if (window.innerWidth <= 768) {
+            navLinks.style.display = "none";
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
